Remove java17 features